making trafficlight=only and trafficlight=short work again

--- a/share/stylesheets/bp-addon.css
+++ b/share/stylesheets/bp-addon.css
@@ -74,6 +74,10 @@ A.status {
 	width:150px; 
 }
 
+#bpa_trafficlight_only_box {
+	padding-top:1em;
+}
+
 #bpa_right_bar { 
 	float:right; 
 	margin:0; 
