new layout with right bar finished

--- a/share/stylesheets/user.css
+++ b/share/stylesheets/user.css
@@ -9,5 +9,6 @@
 #bpa_trafficlight_yes_box { float:right; } */
 
 /* if using the Business Process AddOns with Icinga, you might want to uncomment
-   the following line */
-/* #bpa_foot_version, #bpa_foot_language, .bpa_text_small, .bpa_text_tiny { font-size:100%; } */
+   the following lines */
+/* #bpa_foot_version, #bpa_foot_language, .bpa_text_small, .bpa_text_tiny { font-size:100%; }
+#bpa_body_short, #bpa_trafficlight_short_table { background-color:#EDEDED; } */
